# enterprise-ai-tool-gateway

./: .env.example  .gitignore  README.md  pyproject.toml  run_demo.cmd
docs/: API_AND_EVALS.md  ARCHITECTURE.md  DEMO_WALKTHROUGH.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_GUIDE.md  LLM_PROVIDER_POLICY.md  PROJECT_CONTEXT.md  PROJECT_MAP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: approvals.ts  capabilities.ts  client.ts  errors.ts  runs.ts  types.ts  workflows.ts
frontend/src/app/: AppShell.tsx  routes.tsx
frontend/src/pages/: AccessRequestPage.tsx  DashboardPage.tsx  MaintenanceRequestPage.tsx  ProcurementRequestPage.tsx  RunApprovalsPage.tsx  RunAuditTrailPage.tsx  RunDetailPage.tsx  RunToolCallsPage.tsx  SessionApprovalsPage.tsx  SessionRunsPage.tsx  SettingsPage.tsx  WorkflowCatalogPage.tsx
scripts/: manual_gigachat_smoke.py  mcp_smoke.py  run_eval.py
scripts/demo/: run_demo.ps1  stop_demo.ps1
src/enterprise_ai_tool_gateway/: main.py
tests/: test_access_runtime.py  test_access_tools.py  test_api_approvals_runs.py  test_api_health_capabilities.py  test_api_mappers.py  test_api_workflows.py  test_approval.py  test_audit.py  test_contracts.py  test_db.py  test_demo_workflow_helpers.py  test_evals.py  test_gigachat_provider.py  test_import_boundaries.py  test_llm_spike.py  test_maintenance_runtime.py  test_maintenance_tools.py  test_mcp_boundary.py  test_mcp_spike.py  test_policy.py  test_procurement_runtime.py  test_procurement_tools.py  test_structured_output.py  test_tools.py  test_workflow.py
(+108 files in other folders)
