[project]
name = "enterprise-ai-tool-gateway"
version = "0.1.0"
description = "Controlled enterprise tool gateway for LLM-powered agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "mcp>=1,<2",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "aiosqlite",
    "httpx",
    "truststore>=0.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
